--- a/trunk/DESCRIPTION
+++ b/trunk/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ltp
 Type: Package
 Title: Long Term Prediction 
-Version: 1.1
-Date: 2012-10-18
+Version: 1.2
+Date: 2012-10-29
 Author: Livio, Matteo, Marco
 Maintainer: <livio.spam@gmail.com>
 Description: description
-License: GPL (>= 2)
+License: GPL (>= 3)
 LazyLoad: yes
-Depends: methods,R2HTML, hwriter,tseries,forecast
+Depends: methods,R2HTML, hwriter,tseries,forecast, XML
